err/identeco.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/identeco'...
Listing './lib/python3.5/site-packages/identeco/templates'...
Listing './lib/python3.5/site-packages/identeco/templates/identeco'...
Listing './lib/python3.5/site-packages/identeco/templates/identeco/trust'...
Listing './lib/python3.5/site-packages/identeco/templatetags'...
Compiling './lib/python3.5/site-packages/identeco/views.py'...
***   File "./lib/python3.5/site-packages/identeco/views.py", line 133
    print "~>", self.openid_request.idSelect()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/identeco-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/openid'...
Listing './lib/python3.5/site-packages/openid/consumer'...
Compiling './lib/python3.5/site-packages/openid/consumer/consumer.py'...
***   File "./lib/python3.5/site-packages/openid/consumer/consumer.py", line 345
    except fetchers.HTTPFetchingError, why:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/consumer/discover.py'...
***   File "./lib/python3.5/site-packages/openid/consumer/discover.py", line 307
    except ValueError, why:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/dh.py'...
***   File "./lib/python3.5/site-packages/openid/dh.py", line 8
    xor = lambda (a, b): chr(ord(a) ^ ord(b))
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openid/extensions'...
Compiling './lib/python3.5/site-packages/openid/extensions/ax.py'...
***   File "./lib/python3.5/site-packages/openid/extensions/ax.py", line 307
    except NotAXMessage, err:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openid/extensions/draft'...
Compiling './lib/python3.5/site-packages/openid/extensions/sreg.py'...
***   File "./lib/python3.5/site-packages/openid/extensions/sreg.py", line 97
    except NamespaceAliasRegistrationError, e:
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/fetchers.py'...
***   File "./lib/python3.5/site-packages/openid/fetchers.py", line 209
    except urllib2.HTTPError, why:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/message.py'...
***   File "./lib/python3.5/site-packages/openid/message.py", line 104
    raise NamespaceAliasRegistrationError, \
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/oidutil.py'...
***   File "./lib/python3.5/site-packages/openid/oidutil.py", line 167
    except binascii.Error, why:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openid/server'...
Compiling './lib/python3.5/site-packages/openid/server/server.py'...
***   File "./lib/python3.5/site-packages/openid/server/server.py", line 441
    except ValueError, why:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/server/trustroot.py'...
***   File "./lib/python3.5/site-packages/openid/server/trustroot.py", line 445
    except RealmVerificationRedirected, err:
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openid/store'...
Compiling './lib/python3.5/site-packages/openid/store/filestore.py'...
***   File "./lib/python3.5/site-packages/openid/store/filestore.py", line 27
    fd = os.open(name, os.O_CREAT | os.O_EXCL | os.O_RDWR, 0600)
                                                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/openid/store/sqlstore.py'...
***   File "./lib/python3.5/site-packages/openid/store/sqlstore.py", line 352
    except self.exceptions.OperationalError, why:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/urinorm.py'...
***   File "./lib/python3.5/site-packages/openid/urinorm.py", line 76
    map(lambda (m, n): u'%s-%s' % (unichr(m), unichr(n)),
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openid/yadis'...
Compiling './lib/python3.5/site-packages/openid/yadis/etxrd.py'...
***   File "./lib/python3.5/site-packages/openid/yadis/etxrd.py", line 70
    except XMLError, why:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/yadis/parsehtml.py'...
***   File "./lib/python3.5/site-packages/openid/yadis/parsehtml.py", line 183
    except HTMLParseError, why:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/yadis/services.py'...
***   File "./lib/python3.5/site-packages/openid/yadis/services.py", line 29
    except XRDSError, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openid/yadis/xri.py'...
***   File "./lib/python3.5/site-packages/openid/yadis/xri.py", line 53
    map(lambda (m, n): u'%s-%s' % (unichr(m), unichr(n)),
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_openid-2.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
